<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/viewSessionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="130dp"
        android:text="@string/ViewSession"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sessionNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/sessionNameText"
            android:textColorLink="@color/colorPrimaryDark"

            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewSessionTitle" />

    <TextView
        android:id="@+id/shortDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/shortDesc"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionNameTextView" />

    <EditText
        android:id="@+id/shortDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:background="@drawable/rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortDescriptionLabel"
        />
        <TextView
            android:id="@+id/longDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/longDesc"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shortDescriptionTextView" />
    <EditText
        android:id="@+id/longDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longDescriptionLabel" />

        <LinearLayout
            android:id="@+id/dateLinearLayout"
            android:weightSum="6"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longDescriptionTextView">

            <ImageButton
                android:id="@+id/startDateBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="78dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@drawable/ic_calendar"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.22"
                app:layout_constraintLeft_toLeftOf="parent" />


            <ImageButton
                android:id="@+id/endDateBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/ic_calendar"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/startDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="81dp"
            android:text="@string/startDate"
            app:layout_constraintEnd_toStartOf="@+id/endDateTextView"
            app:layout_constraintTop_toBottomOf="@+id/dateLinearLayout" />

        <TextView
            android:id="@+id/endDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="136dp"
            android:text="@string/endDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateLinearLayout" />
        <TextView
            android:id="@+id/sessionTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/sessionType"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateTextView" />

        <Spinner
            android:id="@+id/sessionTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/sessionTypeLabel"
            app:layout_constraintTop_toBottomOf="@+id/endDateTextView" />

        <TextView
            android:id="@+id/sessionCapacityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/sessionCapacity"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionTypeLabel" />

        <EditText

            android:id="@+id/sessionCapacityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.759"
            app:layout_constraintStart_toEndOf="@+id/sessionCapacityLabel"
            app:layout_constraintTop_toBottomOf="@+id/sessionTypeSpinner" />

        <TextView
            android:id="@+id/sessionInstructorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sessionInstructor"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionCapacityLabel" />


        <EditText
            android:id="@+id/sessionInstructorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionInstructorLabel" />


        <TextView
            android:id="@+id/sessionSpeakerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/sessionSpeaker"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionInstructorEditText" />

        <EditText
            android:id="@+id/speakerSessionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionSpeakerLabel" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/ripple_btn"
            android:text="@string/updateSession"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speakerSessionEditText" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>